--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                          <div class="service-item text-center">
                               <div class="service-pic">
                                    <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541008802/double%20S/pablo-garcia-saldana-102439-unsplash.jpg"
-                                        alt="">
+                                        alt="Long Haul Trucking">
                               </div>
                               <div class="service-description">
                                    <h3>Long Haul</h3>
@@ -76,7 +76,7 @@
                          <div class="service-item text-center">
                               <div class="service-pic">
                                    <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084076/double%20S/19BCC120-113D-49B0-97A6-F9ED69CA7D7A.png"
-                                        alt="">
+                                        alt="Dump Truck">
                               </div>
                               <div class="service-description">
                                    <h3>Bulk Property Hauling</h3>
@@ -90,7 +90,7 @@
                          <div class="service-item text-center">
                               <div class="service-pic">
                                    <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084109/double%20S/813BF996-2EDE-4671-B6D1-8B7999002257.png"
-                                        alt="">
+                                        alt="Hot Shot Truck And trailer">
                               </div>
                               <div class="service-description">
                                    <h3>Express Truck freight </h3>
@@ -104,7 +104,7 @@
                          <div class="service-item text-center">
                               <div class="service-pic">
                                    <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084115/double%20S/BCA15306-099A-4157-ACE6-CCD30BEFB2DB.png"
-                                        alt="">
+                                        alt="Load Recovery">
                               </div>
                               <div class="service-description">
                                    <h3>Long Haul Driver or Load Recovery</h3>
@@ -123,28 +123,28 @@
           <div id="pics" class="gallery-grid">
 
                <div class="gal-img">
-                    <img class="img" src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084112/double%20S/65E107D7-5B52-4B05-8DF0-2296A53982C1.png"
-                         alt="img">
+                    <img class="img" src="./img/boxs.png"
+                         alt="truck hauling boxes">
                </div>
                <div class="gal-img">
-                    <img class="img" src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084104/double%20S/F44885F5-F549-4C4A-9BAF-CD97F97056FA.png"
-                         alt="img">
+                    <img class="img" src="./img/dump.png"
+                         alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541204737/wpid-tractor_trailer.jpg"
-                         alt="img">
+                    <img class="img" src="./img/wpid-tractor_trailer.jpg"
+                         alt="tractor trailer">
                </div>
                <div class="gal-img">
-                    <img class="img" src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541204537/dump-truck-financing.jpg"
-                         alt="img">
+                    <img class="img" src="./img/dump-truck-financing.jpg"
+                         alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541008799/double%20S/truck.jpg"
-                         alt="img">
+                    <img class="img" src="./img/truck.jpg"
+                         alt="truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084076/double%20S/19BCC120-113D-49B0-97A6-F9ED69CA7D7A.png"
-                         alt="img">
+                    <img class="img" src="./img/mirror.png"
+                         alt="view in truck mirror">
                </div>
 
           </div>
