--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541008802/double%20S/pablo-garcia-saldana-102439-unsplash.jpg"
+                                   <img src="./img/pablo-garcia-saldana-102439-unsplash-min.jpg"
                                         alt="Long Haul Trucking">
                               </div>
                               <div class="service-description">
@@ -75,7 +75,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084076/double%20S/19BCC120-113D-49B0-97A6-F9ED69CA7D7A.png"
+                                   <img src="./img/dump-min.png"
                                         alt="Dump Truck">
                               </div>
                               <div class="service-description">
@@ -89,7 +89,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084109/double%20S/813BF996-2EDE-4671-B6D1-8B7999002257.png"
+                                   <img src="./img/haul-min.png"
                                         alt="Hot Shot Truck And trailer">
                               </div>
                               <div class="service-description">
@@ -103,7 +103,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084115/double%20S/BCA15306-099A-4157-ACE6-CCD30BEFB2DB.png"
+                                   <img src="./img/recovery-min.png"
                                         alt="Load Recovery">
                               </div>
                               <div class="service-description">
@@ -123,27 +123,27 @@
           <div id="pics" class="gallery-grid">
 
                <div class="gal-img">
-                    <img class="img" src="./img/boxs.png"
+                    <img class="img" src="./img/boxs-min.png"
                          alt="truck hauling boxes">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump.png"
+                    <img class="img" src="./img/dump-min.png"
                          alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/wpid-tractor_trailer.jpg"
+                    <img class="img" src="./img/wpid-tractor_trailer-min.jpg"
                          alt="tractor trailer">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump-truck-financing.jpg"
+                    <img class="img" src="./img/dump-truck-financing-min.jpg"
                          alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/truck.jpg"
+                    <img class="img" src="./img/truck-min.jpg"
                          alt="truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/mirror.png"
+                    <img class="img" src="./img/mirror-min.png"
                          alt="view in truck mirror">
                </div>
 
