--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
      <title>Double S Trucking</title>
      <!-- Required meta tags -->
      <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 
      <!-- Bootstrap CSS -->
      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -61,8 +61,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/pablo-garcia-saldana-102439-unsplash-min.jpg"
-                                        alt="Long Haul Trucking">
+                                   <img src="./img/pablo-garcia-saldana-102439-unsplash-min.jpg" alt="Long Haul Trucking">
                               </div>
                               <div class="service-description">
                                    <h3>Long Haul</h3>
@@ -75,8 +74,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/dump-min.png"
-                                        alt="Dump Truck">
+                                   <img src="./img/dump-min.png" alt="Dump Truck">
                               </div>
                               <div class="service-description">
                                    <h3>Bulk Property Hauling</h3>
@@ -89,8 +87,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/haul-min.png"
-                                        alt="Hot Shot Truck And trailer">
+                                   <img src="./img/haul-min.png" alt="Hot Shot Truck And trailer">
                               </div>
                               <div class="service-description">
                                    <h3>Express Truck freight </h3>
@@ -103,8 +100,7 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/recovery-min.png"
-                                        alt="Load Recovery">
+                                   <img src="./img/recovery-min.png" alt="Load Recovery">
                               </div>
                               <div class="service-description">
                                    <h3>Long Haul Driver or Load Recovery</h3>
@@ -114,7 +110,7 @@
                               </div>
                          </div>
                     </li>
-                    
+
 
                </ul>
           </div>
@@ -123,28 +119,22 @@
           <div id="pics" class="gallery-grid">
 
                <div class="gal-img">
-                    <img class="img" src="./img/boxs-min.png"
-                         alt="truck hauling boxes">
+                    <img class="img" src="./img/boxs-min.png" alt="truck hauling boxes">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump-min.png"
-                         alt="dump truck">
+                    <img class="img" src="./img/dump-min.png" alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/wpid-tractor_trailer-min.jpg"
-                         alt="tractor trailer">
+                    <img class="img" src="./img/wpid-tractor_trailer-min.jpg" alt="tractor trailer">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump-truck-financing-min.jpg"
-                         alt="dump truck">
+                    <img class="img" src="./img/dump-truck-financing-min.jpg" alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/truck-min.jpg"
-                         alt="truck">
+                    <img class="img" src="./img/truck-min.jpg" alt="truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/mirror-min.png"
-                         alt="view in truck mirror">
+                    <img class="img" src="./img/mirror-min.png" alt="view in truck mirror">
                </div>
 
           </div>
@@ -296,7 +286,7 @@
 
 
 
-    
+
 
 
 
