--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 
 <head>
-     <title>Double S Trucking</title>
+     <title>Double S Trucking Christiansburg Virginia</title>
      <!-- Required meta tags -->
      <meta charset="utf-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+     <meta name="description" content="Trucking Company in virginia, Trucking company in Roanoke Va,Trucking company in Montgomery County, Virginia">
+     <meta name="keywords" content="Trucking,Va,Virginia,Christiansburg,Roanoke,Montgomery County,">
      <!-- Bootstrap CSS -->
      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -57,16 +58,21 @@
           <div id="services" class=" services ">
 
                <h1 class="service-heading text-center ">Services Of Double S Trucking LLC</h1>
+               <h2 class="m-3 p-5">
+                    We Service All of Roanoke Va, Christiansburg Va, As well as All of Virginia.
+               </h2>
                <ul>
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/pablo-garcia-saldana-102439-unsplash-min.jpg" alt="Long Haul Trucking">
+                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541008802/double%20S/pablo-garcia-saldana-102439-unsplash.jpg"
+                                        alt="Long Haul Trucking">
                               </div>
                               <div class="service-description">
                                    <h3>Long Haul</h3>
                                    <p class="m-3">We have two 53 Foot dry vans for all your in state or out of state
                                         needs.</p>
+
                               </div>
                          </div>
                     </li>
@@ -74,7 +80,8 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/dump-min.png" alt="Dump Truck">
+                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084076/double%20S/19BCC120-113D-49B0-97A6-F9ED69CA7D7A.png"
+                                        alt="Dump Truck">
                               </div>
                               <div class="service-description">
                                    <h3>Bulk Property Hauling</h3>
@@ -87,7 +94,8 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/haul-min.png" alt="Hot Shot Truck And trailer">
+                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084109/double%20S/813BF996-2EDE-4671-B6D1-8B7999002257.png"
+                                        alt="Hot Shot Truck And trailer">
                               </div>
                               <div class="service-description">
                                    <h3>Express Truck freight </h3>
@@ -100,7 +108,8 @@
                     <li>
                          <div class="service-item text-center">
                               <div class="service-pic">
-                                   <img src="./img/recovery-min.png" alt="Load Recovery">
+                                   <img src="https://res.cloudinary.com/sites-by-andrew/image/upload/v1541084115/double%20S/BCA15306-099A-4157-ACE6-CCD30BEFB2DB.png"
+                                        alt="Load Recovery">
                               </div>
                               <div class="service-description">
                                    <h3>Long Haul Driver or Load Recovery</h3>
@@ -119,22 +128,22 @@
           <div id="pics" class="gallery-grid">
 
                <div class="gal-img">
-                    <img class="img" src="./img/boxs-min.png" alt="truck hauling boxes">
+                    <img class="img" src="./img/boxs.png" alt="truck hauling boxes">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump-min.png" alt="dump truck">
+                    <img class="img" src="./img/dump.png" alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/wpid-tractor_trailer-min.jpg" alt="tractor trailer">
+                    <img class="img" src="./img/wpid-tractor_trailer.jpg" alt="tractor trailer">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump-truck-financing-min.jpg" alt="dump truck">
+                    <img class="img" src="./img/dump-truck-financing.jpg" alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/truck-min.jpg" alt="truck">
+                    <img class="img" src="./img/truck.jpg" alt="truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/mirror-min.png" alt="view in truck mirror">
+                    <img class="img" src="./img/mirror.png" alt="view in truck mirror">
                </div>
 
           </div>
@@ -190,6 +199,7 @@
                <h3 class="text-center">Double S Trucking LLC is a family owned business founded in 2007. We do
                     everything from in state to across the nation. We Have two tractor
                     trailer set ups with 53 foot dry vans and two 20 Ton dump-trucks.
+                    We Service All of Roanoke Va, Christiansburg Va, As well as All of Virginia.
                     If you need more information Contact us by email or fill out the form above.
                </h3>
           </div>
@@ -264,9 +274,9 @@
 
      <footer class="py-5 bg-black">
           <div class="container">
-               <p class="m-0 text-center text-white small">Copyright &copy; <a href="https://www.sitesbyandrew.me"
+               <p class="m-0 text-center text-white small">Copyright &copy; <a href="https://Owneroperatorswebdesign.com"
                          target="_blank">
-                         A Sites-By-Andrew Creation </a>2018</p>
+                         Created By Owner Operators Web-Design </a>2018</p>
 
           </div>
      </footer>
