--- a/index.html
+++ b/index.html
@@ -128,22 +128,22 @@
           <div id="pics" class="gallery-grid">
 
                <div class="gal-img">
-                    <img class="img" src="./img/boxs.png" alt="truck hauling boxes">
+                    <img class="img" src="./img/boxs-min.png" alt="truck hauling boxes">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump.png" alt="dump truck">
+                    <img class="img" src="./img/dump-min.png" alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/wpid-tractor_trailer.jpg" alt="tractor trailer">
+                    <img class="img" src="./img/wpid-tractor_trailer-min.jpg" alt="tractor trailer">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/dump-truck-financing.jpg" alt="dump truck">
+                    <img class="img" src="./img/dump-truck-financing-min.jpg" alt="dump truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/truck.jpg" alt="truck">
+                    <img class="img" src="./img/truck-min.jpg" alt="truck">
                </div>
                <div class="gal-img">
-                    <img class="img" src="./img/mirror.png" alt="view in truck mirror">
+                    <img class="img" src="./img/mirror-min.png" alt="view in truck mirror">
                </div>
 
           </div>
