update key words and disctp

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
      <!-- Required meta tags -->
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-     <meta name="description" content="Trucking Company in virginia, Trucking company in Roanoke Va,Trucking company in Montgomery County, Virginia">
-     <meta name="keywords" content="Trucking,Va,Virginia,Christiansburg,Roanoke,Montgomery County,dry van, freight,Wytheville,Wytheville Va ,">
+     <meta name="description" content="Trucking Company in virginia, Trucking company in Roanoke Va,Trucking company in Montgomery County, Virginia trucking near Christiansburg, trucking near Wytheville">
+     <meta name="keywords" content="Trucking,Va,Virginia,Christiansburg,Roanoke,Montgomery County,dry van, freight,Wytheville,Wytheville Va ,trucking near Christiansburg, trucking near me, trucking near roanoke ">
      <!-- Bootstrap CSS -->
      <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
           integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
