--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
 
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129095687-2"></script>
+<script>
+     window.dataLayer = window.dataLayer || [];
+
+     function gtag() {
+          dataLayer.push(arguments);
+     }
+     gtag('js', new Date());
+
+     gtag('config', 'UA-129095687-2');
+</script>
+
      <title>Double S Trucking Christiansburg Virginia in state and OTR loads</title>
      <!-- Required meta tags -->
      <meta charset="utf-8">
