--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
           <div id="services" class=" services ">
 
                <h1 class="service-heading text-center ">Services Of Double S Trucking LLC</h1>
-               <h2 class="m-3 p-5">
-                    We Service All of Roanoke Va, Christiansburg Va, As well as All of Virginia.
+               <h2 class="m-3 p-5 sub-heading" >
+                    We Are Located in Lafayette Virginia.
                </h2>
+               
                <ul>
                     <li>
                          <div class="service-item text-center">
@@ -212,7 +213,7 @@
                <h3 class="text-center">Double S Trucking LLC is a family owned business founded in 2007. We do
                     everything from in state to across the nation. We Have two tractor
                     trailer set ups with 53 foot dry vans and two 20 Ton dump-trucks.
-                    We Service All of Roanoke Va, Christiansburg Va, As well as All of Virginia.
+                    We Service  Roanoke, Christiansburg, As well as all of Virginia.
                     If you need more information Contact us by email or fill out the form above.
                </h3>
           </div>
