--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                <h2 class="m-3 p-5 sub-heading">
                     We Are Located in Lafayette Virginia.
                </h2>
+               <h3 class="text-center">Like us on <a href="https://facebook.com/doublestruckingllc">Facebook</a> </h3>
 
                <ul>
                     <li>
