--- a/WytheVille/trucking-wytheville.html
+++ b/WytheVille/trucking-wytheville.html
@@ -36,10 +36,10 @@
                          <div class="navbar-nav">
 
 
-                              <a class="btn nav-item nav-link" href="#about">About</a>
-                              <a class="btn poa nav-item nav-link" href="#contact">Contact</a>
-                              <a class="btn nav-item nav-link " href="#pics">Pictures</a>
-                              <a class="btn nav-item nav-link " href="#apply">Apply Here</a>
+                              <a class="btn nav-item nav-link" href="https://doublestruckingllc.com">About</a>
+                              <a class="btn poa nav-item nav-link" href="https://doublestruckingllc.com">Contact</a>
+                              <a class="btn nav-item nav-link " href="https://doublestruckingllc.com">Pictures</a>
+                              <a class="btn nav-item nav-link " href="https://doublestruckingllc.com">Apply Here</a>
 
                          </div>
 
