--- a/Chirstiansburg/trucking-christiansburg.html
+++ b/Chirstiansburg/trucking-christiansburg.html
@@ -36,10 +36,10 @@
                          <div class="navbar-nav">
 
 
-<a class="btn nav-item nav-link" href="https://doublestruckingllc.com">About</a>
-<a class="btn poa nav-item nav-link" href="https://doublestruckingllc.com">Contact</a>
-<a class="btn nav-item nav-link " href="https://doublestruckingllc.com">Pictures</a>
-<a class="btn nav-item nav-link " href="https://doublestruckingllc.com">Apply Here</a>
+<a class="btn nav-item nav-link" href="https://doublestruckingllc.com/#about">About</a>
+<a class="btn poa nav-item nav-link" href="https://doublestruckingllc.com/#contact">Contact</a>
+<a class="btn nav-item nav-link " href="https://doublestruckingllc.com/#pics">Pictures</a>
+<a class="btn nav-item nav-link " href="https://doublestruckingllc.com/#apply">Apply Here</a>
 
                          </div>
 
