--- a/Roanoke/trucking-roanoke.html
+++ b/Roanoke/trucking-roanoke.html
@@ -35,10 +35,7 @@
 
                          <div class="navbar-nav">
 
-<a class="btn nav-item nav-link" href="https://doublestruckingllc.com/#about">About</a>
-<a class="btn poa nav-item nav-link" href="https://doublestruckingllc.com/#contact">Contact</a>
-<a class="btn nav-item nav-link " href="https://doublestruckingllc.com/#pics">Pictures</a>
-<a class="btn nav-item nav-link " href="https://doublestruckingllc.com/#apply">Apply Here</a>
+                              <a class="btn nav-item nav-link" href="https://doublestruckingllc.com">Home</a>
 
                          </div>
 
@@ -126,7 +123,8 @@
                               <div class="service-description">
                                    <h3>Long Haul Driver or Load Recovery</h3>
                                    <p class="m-3">We all Know bad things Happen and at Double S we plan for all
-                                        possibilities. We Specialize in recovering your load and getting it delivered in
+                                        possibilities. We Specialize in recovering your load and getting it delivered
+                                        in
                                         the case of mechanical or driver failure. </p>
                               </div>
                          </div>
@@ -138,14 +136,14 @@
 
 
      </div>
-<footer class="py-5 bg-black">
-     <div class="container">
-          <p class="m-0 text-center text-white small">Copyright &copy; <a href="https://Owneroperatorswebdesign.com"
-                    target="_blank">
-                    Created By Owner Operators Web-Design </a>2018</p>
+     <footer class="py-5 bg-black">
+          <div class="container">
+               <p class="m-0 text-center text-white small">Copyright &copy; <a href="https://Owneroperatorswebdesign.com"
+                         target="_blank">
+                         Created By Owner Operators Web-Design </a>2018</p>
 
-     </div>
-</footer>
+          </div>
+     </footer>
 
 
 
