--- a/Chirstiansburg/trucking-christiansburg.html
+++ b/Chirstiansburg/trucking-christiansburg.html
@@ -69,7 +69,7 @@
 
                <h1 class="service-heading text-center ">Double S Trucking In Christiansburg</h1>
                <h2 class="m-3 p-5 sub-heading">
-                    Our services in the Christiansburg Virginia area.
+                    Trucking and freight transport services services in the Christiansburg Virginia area.
                </h2>
 
                <ul>
