--- a/Roanoke/trucking-roanoke.html
+++ b/Roanoke/trucking-roanoke.html
@@ -68,7 +68,7 @@
 
                <h1 class="service-heading text-center ">Double S Trucking In Roanoke</h1>
                <h2 class="m-3 p-5 sub-heading">
-                    Our services in the Roanoke Virginia area.
+                    Trucking and freight transport services in the Roanoke Virginia area.
                </h2>
 
                <ul>
