--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
                <h1 class="service-heading text-center ">Services Of Double S Trucking LLC</h1>
                <h2 class="m-3 p-5 sub-heading">
-                    We Are Located in Lafayette Virginia.
+                    Trucking and Freight Transport company Located in Lafayette Virginia.
                </h2>
                <h3 class="text-center">Like us on <a href="https://facebook.com/doublestruckingllc">Facebook</a> </h3>
 
