--- a/WytheVille/trucking-wytheville.html
+++ b/WytheVille/trucking-wytheville.html
@@ -69,7 +69,7 @@
 
                <h1 class="service-heading text-center ">Double S Trucking In WytheVille</h1>
                <h2 class="m-3 p-5 sub-heading">
-                    Our services in the WytheVille Virginia area.
+                    Trucking and freight transport services services in the WytheVille Virginia area.
                </h2>
 
                <ul>
