--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
 
           <div id="services" class=" services ">
-               <h1 class="m-3 p-5 sub-heading">
+               <h1 class="m-3 p-5 text-center sub-heading">
                     Trucking and Freight Transport company Located in Lafayette Virginia.
                </h1>
                <h2 class="service-heading text-center ">Services Of Double S Trucking LLC</h2>
